sfdx-source/cozycub/main/default/objects/Player__c/fields/Calm__c.field-meta.xml
<CustomField>
    <fullName>Calm__c</fullName>
    <label>Calm</label>
    <length>20</length>
    <type>Text</type>
</CustomField>