sfdx-source/cozycub/main/default/objects/Player__c/fields/Happy__c.field-meta.xml
<CustomField>
    <fullName>Happy__c</fullName>
    <label>Happy</label>
    <length>20</length>
    <type>Text</type>
</CustomField>