sfdx-source/cozycub/main/default/objects/Player__c/fields/Money__c.field-meta.xml
<CustomField>
    <fullName>Money__c</fullName>
    <label>Money</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>