sfdx-source/cozycub/main/default/objects/Player__c/fields/Sad__c.field-meta.xml
<CustomField>
    <fullName>Sad__c</fullName>
    <label>Sad</label>
    <length>20</length>
    <type>Text</type>
</CustomField>